yaml/Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: flask-route
spec:
  host: flask-svc-flask-demo.apps-crc.testing
  port:
    targetPort: 8080
  to:
    kind: Service
    name: flask-svc
