yaml/NetworkDeny.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-by-default
  namespace: flask-demo
spec:
  podSelector: {}
  ingress: []
